[tool.poetry]
name = "autogen-vertexai-memory"
version = "0.1.14"
description = "VertexAI Memory integration for Autogen agents"
authors = ["thelaycon <tobitobitobiwhy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thelaycon/autogen-vertexai-memory"
repository = "https://github.com/thelaycon/autogen-vertexai-memory"
documentation = "https://github.com/thelaycon/autogen-vertexai-memory"
keywords = ["autogen", "vertexai", "memory", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "autogen_vertexai_memory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
autogen-core = ">=0.7.5,<0.8.0"
google-cloud-aiplatform = ">=1.121.0,<2.0.0"
pydantic = "^2.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"